<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>deliverybot_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="liamd@indrorobotics.com">liamd</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>tf2</depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_python</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
  </export>
</package>
